--- a/wwr/images/desktop.ini
+++ b/wwr/images/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Best-Place-to-White-Water-Raft-in-Colorado.jpg=@Best-Place-to-White-Water-Raft-in-Colorado,0
+raft3.jpg=@raft3,0
