--- a/wwr/images/desktop.ini
+++ b/wwr/images/desktop.ini
@@ -1,3 +1,4 @@
 [LocalizedFileNames]
 Best-Place-to-White-Water-Raft-in-Colorado.jpg=@Best-Place-to-White-Water-Raft-in-Colorado,0
 raft3.jpg=@raft3,0
+Instagram_logo_2016.svg.jpg=@Instagram_logo_2016.svg,0
